fix scrollbar

--- a/src/livecodes/styles/app.scss
+++ b/src/livecodes/styles/app.scss
@@ -112,8 +112,6 @@
 
 // scrollbar
 * {
-  scrollbar-width: thin;
-
   &::-webkit-scrollbar {
     height: 10px;
     width: 10px;
